no fail fast, try different ps1 path

--- a/pixi.toml
+++ b/pixi.toml
@@ -25,7 +25,7 @@ conda-build = "*"
 [feature.bootstrap.target.linux-64.tasks]
 setup = "setup.sh"
 [feature.bootstrap.target.win-64.tasks]
-setup = "setup.ps1"
+setup = "./setup.ps1"
 
 [environments]
 main = { features = ["main"] }
