use default env

--- a/pixi.toml
+++ b/pixi.toml
@@ -25,8 +25,8 @@ conda-build = "*"
 [feature.bootstrap.target.linux-64.tasks]
 setup = "setup.sh"
 [feature.bootstrap.target.win-64.tasks]
-setup = "./setup.ps1"
+setup = "powershell -File setup.ps1"
 
 [environments]
-main = { features = ["main"] }
+default = { features = ["main"] }
 bootstrap = { features = ["bootstrap"] }
