--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["Simon Poltier <simon.poltier@mirai-solutions.com>"]
 channels = [
     "conda-forge",
-    # "file://C:/tmp/custom_artifacts/conda",
+    "file://C:/tmp/custom_artifacts/conda",
     "file:///tmp/custom_artifacts/conda",
 ]
 name = "pixi-localpath-crossplatform"
@@ -13,8 +13,8 @@ version = "0.1.0"
 
 [dependencies]
 
-# [feature.main.target.win-64.dependencies]
-# hll = { version = "*", channel = "file://C:/tmp/custom_artifacts/conda" }
+[feature.main.target.win-64.dependencies]
+hll = { version = "*", channel = "file://C:/tmp/custom_artifacts/conda" }
 [feature.main.target.linux-64.dependencies]
 hll = { version = "*", channel = "file:///tmp/custom_artifacts/conda" }
 
