--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Simon Poltier <simon.poltier@mirai-solutions.com>"]
 channels = [
     "conda-forge",
     "file://C:/tmp/custom_artifacts/conda",
-    "file:///tmp/custom_artifacts/conda",
+    # "file:///tmp/custom_artifacts/conda",
 ]
 name = "pixi-localpath-crossplatform"
 platforms = ["linux-64", "win-64"]
